Fixed the display of the posts page on mobile version and updated desktop version

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -23,7 +23,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 // Width of the content area
 $content-width:    1000px !default;
 
-$on-palm:          600px !default;
+$on-palm:          650px !default;
 $on-laptop:        1000px !default;
 
 // Use media queries like this:
